<resources>


    <string name="app_name">Book My Show Tickets</string>
    <string name="admin_login">Please Enter Admin email and password to loging accese to Admin app</string>
    <string name="user_login">Log in to your account using Email, social account else create account</string>
    <string name="admin_display">Controle full application from hear....</string>
    <string name="user_display">Looks like you do not have an account or connect with social accounts </string>
    <string name="user_home_display">Best Movie Ticket booking application....</string>
    <string name="category">Create Category</string>
    <string name="manage_movie">Manage All Movie</string>
    <string name="add_movie_trialer">Add Movie Trialer</string>
    <string name="view_booking">View All Booking</string>
    <string name="theater">Manage Theaters</string>
    <string name="create_notify">Create Notifications</string>
    <string name="login">Manage Login</string>
    <string name="enter_category">Enter Category Name</string>
    <string name="add_movie">Add Movie Here</string>
    <string name="create_movie">Create Movie </string>
    <string name="add_movie_img">Add Movie Image</string>
    <string name="add_category_img">Upload Image</string>
    <string name="add_category">Enter Category Name</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Privacy</string>
    <string name="menu_slideshow">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_booking">Booking History</string>
    <string name="menu_watchlist">WatchList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="line1">At Book Show My Tickets, your privacy is important to us. This policy outlines how we collect and use your personal information.</string>


</resources>